# 23209

./: README.md  node.cpp  string.cpp
lab1/: CMakeLists.txt  circular.cpp  circular.h  test.cpp
lab1/examples/: input.universe  pulsar.universe
lab1/src/: ArgumentParser.h  Cell.cpp  LifeGame.cpp  LifeGame.h  Universe.cpp  main.cpp
lab2/examples/: beacon.universe  glider.universe  output.universe
lab2/src/: ArgumentParser.cpp  CMakeLists.txt  Cell.h  Universe.h
lab3/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Converter.h  CustomConverter.cpp  CustomConverter.h  Exceptions.h  MixerConverter.cpp  MixerConverter.h  MuteConverter.cpp  MuteConverter.h  SoundProcessor.cpp  SoundProcessor.h  WavFile.cpp  WavFile.h  config.txt  main.cpp
lab4/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  TuplePrinter.h  main.cpp  test.csv
